--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,20 +1,30 @@
 node {
-   def gitcommit
-   stage('Verificación SCM') {
-     checkout scm
-     sh "git rev-parse --short HEAD > .git/commit-id"                        
-     gitcommit = readFile('.git/commit-id').trim()
-   }
-   stage('test') {
-     nodejs(nodeJSInstallationName: 'nodejs') {
-       sh 'npm install --only=dev'
-       sh 'npm test'
-     }
-   }
-   stage('Docker Build & Push') {
-     docker.withRegistry('https://registry.hub.docker.com', 'docker-hub') {
-      def nuestraapp = docker.build("kepler1987/nodejsapp:${gitcommit}", ".")
-      nuestraapp.push()
-     }
-   }
+  def gitcommit
+  stage('Verificación SCM') {
+    checkout scm
+    sh "git rev-parse --short HEAD > .git/commit-id"                        
+    gitcommit = readFile('.git/commit-id').trim()
+  }
+  stage('test') {
+    nodejs(nodeJSInstallationName: 'nodejs') {
+      sh 'npm install --only=dev'
+      sh 'npm test'
+    }
+  }
+  stage('Docker Build & Push') {
+    docker.withRegistry('https://registry.hub.docker.com', 'docker-hub') {
+    def nuestraapp = docker.build("kepler1987/nodejsapp:${gitcommit}", ".")
+    nuestraapp.push()
+    }
+  }
+  stage('build-image'){
+    steps{
+      sh "docker build -t kepler1987/nodejsapp:${gitcommit} ."
+    }
+  }
+  stage('deploy') {
+    steps {
+      sh "docker run -p 8090:8090 kepler1987/nodejsapp:${gitcommit}"
+    }
+  }
 }
